# pivot_engine

./: .gitignore  CHANGELOG.md  README.md  benchmark.py  debug_pivot_columns.py  debug_pivot_full.py  debug_totals.py  debug_tree_logic.js  final_fix_report.md  final_verification.py  fix_report.md  fix_report_v2.md  implementation_report.md  pyproject.toml  reproduce_ibis_where_fix.py  reproduce_issue.py  reproduce_user_issue.py  requirements.txt  test_column_tree_logic.js  test_expand_all.py  test_expand_all_backend.py  test_filtering.py  test_fix_verification.py  test_flat_final.py  test_flat_output.py  test_hierarchical_async.py  test_ifelse.py  test_tanstack_communication.py  test_virtual_scroll.py  test_virtual_scroll_pivot.py
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md
.planning/phases/01-test-audit-baseline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md  TEST_BASELINE.md  audit_raw.txt  coverage_raw.txt  final_run.txt  scripts_raw.txt
.planning/phases/02-data-correctness-bugs/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-virtual-scroll-ui-bugs/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/03.1-debug-instrumentation-grand-total-fix/: 03.1-01-PLAN.md  03.1-01-SUMMARY.md  03.1-02-PLAN.md  03.1-02-SUMMARY.md  03.1-RESEARCH.md  03.1-VALIDATION.md  03.1-VERIFICATION.md
.planning/phases/03.2-test-harness-hardening/: 03.2-01-PLAN.md  03.2-01-SUMMARY.md  03.2-02-PLAN.md  03.2-02-SUMMARY.md  03.2-RESEARCH.md  03.2-VALIDATION.md  03.2-VERIFICATION.md
.planning/phases/04-data-input-api/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-field-zone-ui/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  (+4 more)
dash_presentation/: app.py
dash_tanstack_pivot/: pyproject.toml
dash_tanstack_pivot/dash_tanstack_pivot/: DashTanstackPivot.py  __init__.py  dash_tanstack_pivot.min.js  metadata.json
examples/: example_scalable_pivot.py
pivot_engine/: __init__.py  complete_rest_api.py  config.py  controller.py  flight_server.py  hierarchical_scroll_manager.py  intelligent_prefetch_manager.py  main.py  materialized_hierarchy_manager.py  progressive_loader.py  pruning_manager.py  runtime.py  scalable_pivot_controller.py  security.py  tanstack_adapter.py  tree.py
pivot_engine/backends/: duckdb_backend.py  ibis_backend.py
pivot_engine/cache/: memory_cache.py  redis_cache.py
pivot_engine/cdc/: cdc_manager.py  database_change_detector.py
pivot_engine/common/: ibis_expression_builder.py
pivot_engine/diff/: diff_engine.py
pivot_engine/pivot_engine/: controller.py  scalable_pivot_controller.py  tanstack_adapter.py
pivot_engine/planner/: ibis_planner.py  sql_planner.py
pivot_engine/streaming/: streaming_processor.py
pivot_engine/types/: pivot_spec.py
pivot_engine/util/: arrow_utils.py
scripts/ci/: check_tag_version.py
tests/: test_advanced_planning.py  test_cdc.py  test_complete_implementation.py  test_data_input.py  test_diff_engine_enhancements.py  test_export.py  test_field_zone_ui.py  test_microservices.py  test_packaging_smoke.py  test_scalable_pivot.py  test_streaming_incremental.py
(+54 files in other folders)
